deleted:    out/.nojekyll 	deleted:    out/_next/static/_7mF_1A_BtMvl6-9C9wRF/_buildManifest.js 	deleted:    out/_next/static/_7mF_1A_BtMvl6-9C9wRF/_ssgManifest.js 	deleted:    out/_next/static/chunks/675-ac36340d0b692358.js 	deleted:    out/_next/static/chunks/main-07a7c656f419cc8d.js 	deleted:    out/_next/static/chunks/pages/_app-61d65f8fe02730c8.js 	modified:   package.json 	modified:   pages/components/history.jsx

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "export": "next export",
+    "production": "npm run build && npm run export",
+    "deploy": "npm run production && gh-pages -d out",
     "start": "next start",
     "lint": "next lint"
   },
