--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react-snowfall": "^1.2.1"
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "@types/node": "18.11.11",
+    "@types/react": "18.0.26",
+    "gh-pages": "^4.0.0",
+    "typescript": "4.9.3"
   }
 }
